# ZurFur

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  deny.toml  docker-compose.yml  typos.toml
backend/crates/adapter-atproto/: CLAUDE.md  Cargo.toml  build.rs
backend/crates/adapter-atproto/queries/auth_store/: delete_auth_req_info.sql  delete_session.sql  get_auth_req_info.sql  get_session.sql  save_auth_req_info.sql  upsert_session.sql
backend/crates/adapter-atproto/src/: auth_store.rs  did_minter.rs  lib.rs  plc.rs  plc_directory.rs  profile.rs  public_records.rs  queries.rs  secret_vault.rs
backend/crates/adapter-atproto/tests/: auth_store.rs  public_records.rs  wipe_replay.rs
backend/crates/adapter-mem/: Cargo.toml
backend/crates/adapter-mem/src/: actor_identity.rs  commission.rs  file_store.rs  lib.rs  public_records.rs
backend/crates/adapter-mem/tests/: commission.rs  public_records.rs
backend/crates/adapter-pg/: CLAUDE.md  Cargo.toml  build.rs  sqlx.toml
backend/crates/adapter-pg/migrations/: 20260617071814_create_sessions_table.sql  20260618000001_create_users_table.sql  20260619000001_create_profile_cache_table.sql  20260621000001_create_atproto_oauth_tables.sql  20260621120000_create_accounts_tables.sql  20260626065617_create_account_invitations.sql  20260627224853_add_listed_on_profile.sql  20260627235014_parent_uuid_fk.sql  20260630140000_add_account_handle.sql  20260630190000_create_account_keys_table.sql  20260701120000_create_plc_operations.sql  20260702000000_plc_operations_no_chain_fork.sql  20260702120000_create_account_handle_changes.sql  20260702185251_add_commissions_table.sql  20260702210648_add_visibility_commissions.sql  20260705120000_create_commission_changelog.sql  20260705150000_create_commission_node.sql  20260705153000_add_commission_direction_status.sql  20260705190000_add_archived_at_commission.sql  20260705190000_create_commission_slot.sql  20260705190001_create_commission_slot.sql  20260705193000_add_commission_deadline_status.sql  20260705200000_create_commission_placement_and_view_grant.sql  20260706100001_create_commission_participant_and_seat.sql  20260707000000_add_maturity_commission.sql  20260710055222_create_commission_files.sql  20260714211223_create_actor_identity.sql  20260714214839_add_actor_identity_kind.sql  20260714220545_add_actor_identity_did.sql  20260714221008_add_actor_identity_state.sql  20260714222043_add_actor_identity_handle.sql  20260714232603_add_actor_identity_first_seen.sql  20260717012204_create_commission_invitation.sql  20260718193956_backfill_actor_identity_from_projections.sql  20260718194001_actor_projection_composite_fk.sql  20260718194008_drop_projection_did.sql
backend/crates/adapter-pg/queries/account/: accept_invitation_flip.sql  accept_invitation_seat.sql  change_handle_audit.sql  change_handle_repoint.sql  count_handle_changes_since.sql  create_account.sql  create_invitation.sql  create_owner_membership.sql  departure_delete_membership.sql  departure_membership.sql  departure_rehome_children.sql  departure_revoke_invitations.sql  find.sql  find_did_by_handle.sql  find_invitation.sql  find_pending_invitation.sql  grant_role.sql  handle_reserved_for_other.sql  hard_delete_account.sql  hard_delete_invitations.sql  hard_delete_memberships.sql  revoke_invitation.sql  role_of.sql  soft_delete.sql  transfer_demote_owner.sql  transfer_promote_heir.sql
backend/crates/adapter-pg/queries/actor_identity/: cache_handle.sql  create.sql  find.sql  find_by_did.sql  intern.sql
backend/crates/adapter-pg/queries/changelog/: append.sql  entries.sql
backend/crates/adapter-pg/queries/commission/: add_component.sql  add_file.sql  add_participant.sql  add_surface.sql  create_commission.sql  create_root_surface.sql  create_seat_invitation.sql  current_placement.sql  declare_seat_satellite.sql  declare_slot_node.sql  declare_slot_satellite.sql  delete.sql  find.sql  find_file.sql  find_pending_seat_invitation.sql  grant_view.sql  is_participant.sql  lapsed_deadlines.sql  load_tree.sql  place_append.sql  place_repoint_current.sql  placement_log.sql  remove_node_delete.sql  remove_node_gate.sql  remove_node_renumber.sql  revoke_view.sql  (+10 more)
backend/crates/adapter-pg/src/: account.rs  actor_identity.rs  commission.rs  commission_changelog.rs  file_store.rs  key_store.rs  key_vault.rs  lib.rs  plc_operation_log.rs  profile.rs  queries.rs  session_store.rs  uow.rs  user.rs
backend/crates/adapter-pg/tests/: account.rs  actor_identity.rs  codegen_current.rs  commission.rs  commission_changelog.rs  commission_deadline.rs  commission_file.rs  commission_maturity.rs  commission_node.rs  commission_positioning.rs  commission_seat.rs  commission_slot.rs  key_store.rs  no_bare_pool_writes.rs  plc_operation_log.rs  profile_cache.rs  query_files_prepare.rs  session_store.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs  problem.rs  sweep.rs
backend/crates/api/tests/: account_scope_gate.rs  accounts.rs  commission_archive.rs  commission_changelog.rs  commission_components.rs  commission_deadline.rs  commission_delete.rs  commission_files.rs  commission_markup.rs  commission_maturity.rs  commission_positioning.rs  commission_removal.rs  commission_seat_invitations.rs  commission_seats.rs  commission_slots.rs  commission_status.rs  commission_submission_contract.rs  commission_surfaces.rs  commissions.rs  cross_persona_unlinkability.rs  csrf.rs  e2e.rs  handle_change.rs  health.rs  invitations.rs  leave.rs  logout.rs  profile.rs  session.rs  session_fixation.rs  session_persistence.rs  transfer.rs
backend/crates/domain/: Cargo.toml  README.md
backend/crates/domain/src/: datetime.rs  elements.rs  lib.rs  ports.rs  string_builder.rs
backend/crates/domain/tests/: fact_contract.rs
backend/crates/query-codegen/: Cargo.toml
backend/crates/query-codegen/src/: lib.rs  main.rs
backend/crates/test-support/: Cargo.toml
backend/crates/test-support/src/: contract.rs  fixture.rs  lib.rs  pds.rs  pg.rs  plc_stub.rs
backend/crates/test-support/tests/: throwaway_pds.rs
(+324 files in other folders)
