[workspace]
resolver = "2"

members = ["backend/crates/*"]


exclude = [
  "frontend",
  "node_modules",
  "dist",
  ".next",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
axum = { version = "0.8.8" }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9.0", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "macros",
  "time",
  "uuid",
  "chrono",
  "sqlx-toml",
] }
# Facade (axum layer + Session extractor) for the composition root; the adapter
# implements the traits from -core directly, so it needn't pull the axum layer.
tower-sessions = { version = "0.15" }
tower-sessions-core = { version = "0.15", features = ["deletion-task"] }
time = { version = "0.3" }
rmp-serde = { version = "1" }
async-trait = { version = "0.1" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
dotenvy = { version = "0.15.7" }
anyhow = "1.0.102"
