[workspace]
resolver = "2"

members = ["backend/crates/*"]


exclude = [
  "frontend",
  "node_modules",
  "dist",
  ".next",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
axum = { version = "0.8.8" }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9.0", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "macros",
  "time",
  "uuid",
  "chrono",
  "sqlx-toml",
] }
# Facade (axum layer + Session extractor) for the composition root; the adapter
# implements the traits from -core directly, so it needn't pull the axum layer.
tower-sessions = { version = "0.15" }
tower-sessions-core = { version = "0.15", features = ["deletion-task"] }
time = { version = "0.3" }
rmp-serde = { version = "1" }
async-trait = { version = "0.1" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
dotenvy = { version = "0.15.7" }
anyhow = "1.0.102"
rand = { version = "0.8" }
# --- ZMVP-49: real did:plc minter, key custody, envelope encryption ---
# secp256k1 keygen + atproto-canonical ECDSA-SHA256 sign (low-S, 64-byte r‖s) +
# did:key multikey formatting. The vetted primitive, not hand-rolled k256.
atrium-crypto = "0.1.3"
# DAG-CBOR (RFC 8949 core-deterministic): canonically sorts map/struct keys on
# serialize — load-bearing for byte-exact PLC operation hashing.
serde_ipld_dagcbor = "0.6"
sha2 = "0.10"
# base32 (DID derivation) + we use base64url no-pad for the operation signature.
data-encoding = "2"
base64 = "0.22"
# Envelope encryption of per-DID private keys at rest (AEAD under a root key).
chacha20poly1305 = "0.10"
# Wipe secret key material from memory on drop.
zeroize = { version = "1", features = ["derive"] }
