[workspace]
resolver = "2"

members = ["backend/crates/*"]


exclude = [
  "frontend",
  "node_modules",
  "dist",
  ".next",
]

[workspace.dependencies]
# The extracted codegen library (was the in-tree `query-codegen` lib); the
# in-tree crate is now just the Zurfur-specific runner binary. Pinned by tag —
# generator output is committed (src/queries.rs) and diffed by the
# codegen_current gate, so upgrading the pin is an explicit PR that also
# regenerates. Build prerequisite: v0.2+ parses SQL via `pg_query`, whose
# bindgen build needs libclang at compile time (present on GitHub's
# ubuntu-latest runners; install clang/libclang-dev locally if the build
# can't find it).
sqlx-rust-codegen = { git = "https://github.com/ZurNetwork/sqlx-rust-codegen.git", tag = "v0.2.2" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v7", "serde"] }
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9.0", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  # `derive` (FromRow/Type), deliberately NOT `macros`: the query!/query_as!
  # compile-time macros are retired — SQL lives in queries/*.sql files, executed
  # via the runtime API and verified by each adapter's prepare-all-files test.
  # Reintroducing a query macro is a compile error by construction.
  "derive",
  "time",
  "uuid",
  "chrono",
  # jsonb columns <-> serde_json::Value (the commission tree's node payload).
  "json",
  "sqlx-toml",
] }
# Facade (axum layer + Session extractor) for the composition root; the adapter
# implements the traits from -core directly, so it needn't pull the axum layer.
tower-sessions = { version = "0.15" }
# `set-header` only: the `SetResponseHeaderLayer` that stamps `Cache-Control:
# no-store` on the authenticated cookie surface (CWE-525, ZMVP-151). Already in
# the tree transitively (reqwest decompression) — this just turns on the module.
tower-http = { version = "0.6", features = ["set-header"] }
tower-sessions-core = { version = "0.15", features = ["deletion-task"] }
time = { version = "0.3" }
rmp-serde = { version = "1" }
async-trait = { version = "0.1" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
dotenvy = { version = "0.15.7" }
anyhow = "1.0.103"
rand = { version = "0.8" }
# --- ZMVP-49: real did:plc minter, key custody, envelope encryption ---
# secp256k1 keygen + atproto-canonical ECDSA-SHA256 sign (low-S, 64-byte r‖s) +
# did:key multikey formatting. The vetted primitive, not hand-rolled k256.
atrium-crypto = "0.1.3"
# DAG-CBOR (RFC 8949 core-deterministic): canonically sorts map/struct keys on
# serialize — load-bearing for byte-exact PLC operation hashing.
serde_ipld_dagcbor = "0.6"
sha2 = "0.10"
# base32 (DID derivation) + we use base64url no-pad for the operation signature.
data-encoding = "2"
base64 = "0.22"
# Envelope encryption of per-DID private keys at rest (AEAD under a root key).
chacha20poly1305 = "0.10"
# Wipe secret key material from memory on drop.
zeroize = { version = "1", features = ["derive"] }
