[package]
name = "adapter-atproto"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
async-trait = { workspace = true }
anyhow = { workspace = true }
jacquard = { version = "0.12.0", features = ["loopback", "derive"] }
jacquard-oauth = { version = "0.12.0" }
jacquard-common = { version = "0.12.0" }
fluent-uri = { version = "0.4.1", features = ["std"] }
smol_str = "0.3.6"
# Public-boundary record writes (ZMVP-105): content-address CIDs for blob refs,
# raw request body bytes, and typed HTTP headers for uploadBlob's Content-Type.
cid = "0.11.3"
bytes = "1"
http = "1"
chrono = { workspace = true }
# Randomness for the floor stub minter and for secp256k1 key generation.
rand = { workspace = true }
# --- ZMVP-49 real did:plc minter ---
# secp256k1 keygen + atproto-canonical ECDSA-SHA256 signing + did:key formatting.
atrium-crypto = { workspace = true }
# Byte-exact DAG-CBOR of the PLC operation (canonical key ordering).
serde_ipld_dagcbor = { workspace = true }
sha2 = { workspace = true }
# base32 for the DID suffix.
data-encoding = { workspace = true }
# base64url (no pad) for the operation signature.
base64 = { workspace = true }
tracing = { workspace = true }
# Persists OAuth state (the ClientAuthStore impl) to the private boundary. This
# crate uses the pool as a plain DB client; api injects it from adapter-pg.
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Supplies the concrete HttpClient for the resolver and the TLS backend jacquard
# leaves to the consumer (jacquard-common enables only json/charset on reqwest).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
# Generates the typed query registry (enums + sql() + ALL_QUERIES) from queries/.
query-registry-build = { path = "../query-registry-build" }

[dev-dependencies]
# Boots a throwaway Postgres so the store round-trips against the real migration.
# adapter-pg (test-only) supplies connect + migrate; this is not a runtime edge.
adapter-pg = { path = "../adapter-pg" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true }
# The in-memory KeyStore fake, so RealDidMinter unit-tests need no database.
adapter-mem = { path = "../adapter-mem" }
# Assert the genesis signature is low-S (Signature::normalize_s) in tests.
k256 = { version = "0.13", features = ["ecdsa"] }
# The throwaway PDS rig + the shared PublicRecords conformance suite (ZMVP-105).
test-support = { path = "../test-support" }
chrono = { workspace = true }
