[package]
name = "adapter-mem"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
# Minting AccountIds for the test seed helpers (e.g. seed_soft_deleted_account).
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
