[package]
name = "adapter-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tower-sessions-core = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
async-trait = { workspace = true }
domain = { path = "../domain/" }
anyhow = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["postgres"] }
serde_json = { workspace = true }
