[package]
name = "adapter-pg"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tower-sessions-core = { workspace = true }
time = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
async-trait = { workspace = true }
domain = { path = "../domain/" }
anyhow = { workspace = true }
# Mint the audit-row id for a handle change (UUIDv7), app-side like every other key.
uuid = { workspace = true }
# Parse a logged PLC operation's JSON text into native `jsonb` for the op-log table.
serde_json = { workspace = true }
# Envelope-encrypt custody keys at rest (XChaCha20-Poly1305 AEAD under a root key).
chacha20poly1305 = { workspace = true }
# Wipe intermediate plaintext key buffers after wrap/unwrap.
zeroize = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["postgres"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
