[package]
publish = false
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
adapter-pg = { path = "../adapter-pg" }
axum = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
adapter-atproto = { path = "../adapter-atproto/" }
fluent-uri = { version = "0.4.1", features = ["std"] }
tower-sessions = { workspace = true }
# `SetResponseHeaderLayer` (set-header feature) — the no-store cache header layer
# over the cookie surface in `app()` (ZMVP-151, CWE-525).
tower-http = { workspace = true }
# Decode the DEV-ONLY did:plc custody root key (base64) at boot (ZMVP-49).
base64 = { workspace = true }
# The deadline sweeper takes a Postgres transaction-scoped advisory lock
# (`pg_try_advisory_xact_lock`) for single-writer leader election across api
# instances (see `sweep.rs`); that
# is the only direct use of sqlx in this crate — reads/writes otherwise go through the
# adapter-pg ports.
sqlx = { workspace = true }
[dev-dependencies]
adapter-mem = { path = "../adapter-mem" }
# Implement port-trait test doubles (the fact-bearing unit-of-work wrapper in
# the ZMVP-66 delete tests) against the async port traits.
async-trait = { workspace = true }
# Shared template-database harness (one Postgres container per test process).
test-support = { path = "../test-support" }
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "multipart"] }
