[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
cid = "0.11.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
# Wipe custody key material (AccountKeys/SecretKey) from memory on drop.
zeroize = { workspace = true }
