[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
uuid = { workspace = true }
cid = "0.11.3"
async-trait = { workspace = true }
anyhow = { workspace = true }
# The changelog entry payload (ZMVP-87) is kind-specific JSON; the Markup
# annotation shapes (ZMVP-90) derive their strict wire (de)serialization.
serde = { workspace = true }
serde_json = { workspace = true }
# Wipe custody key material (AccountKeys/SecretKey) from memory on drop.
zeroize = { workspace = true }
