[package]
name = "query-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
# `Executor::describe` is gated behind sqlx's `offline` feature, which the
# facade only exposes bundled with `macros` (the feature the workspace
# deliberately retired). Enabling it on the underlying crates directly gives
# this generator statement metadata WITHOUT resurrecting the query macros —
# feature unification cannot re-enable `sqlx-macros/macros` from here.
sqlx-core = { version = "0.9.0", features = ["offline"] }
sqlx-postgres = { version = "0.9.0", features = ["offline"] }
tokio = { workspace = true }
# The bin boots a throwaway Postgres and migrates it with the real embedded set
# before describing every statement against the real schema.
adapter-pg = { path = "../adapter-pg" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
