[package]
publish = false
name = "query-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
# The generator library, extracted to its own repo; this crate is just the
# Zurfur-specific runner binary around it (boots a container, runs the real
# embedded migrations, rewrites both adapters' committed src/queries.rs).
sqlx-rust-codegen = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
# The bin boots a throwaway Postgres and migrates it with the real embedded set
# before describing every statement against the real schema.
adapter-pg = { path = "../adapter-pg" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
