[package]
name = "test-support"
version = "0.1.0"
edition = "2024"
# Test-rig crate (ZMVP-103): never published, consumed as a dev-dependency.
publish = false

[dependencies]
anyhow = { workspace = true }
# The shared PublicRecords conformance suite (ZMVP-105) is generic over the
# domain port and is run against every adapter that implements it.
domain = { path = "../domain" }
chrono = { workspace = true }
# The in-process stub PLC directory the throwaway PDS publishes identities to.
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
# Same version testcontainers-modules 0.15 (the Postgres harness) resolves to;
# the PDS drives a GenericImage from the core crate, the shared Postgres
# harness (`pg`) drives the postgres module.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
# The shared Postgres harness migrates the template once and vends adapter-pg
# pools; the consuming adapters dev-depend back on this crate (the standard
# cargo dev-cycle).
adapter-pg = { path = "../adapter-pg" }
sqlx = { workspace = true }
uuid = { workspace = true }
# Plain-HTTP XRPC against 127.0.0.1 — no TLS backend needed.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# Structurally-valid secp256k1 rotation key for the throwaway PDS (a random
# 32-byte string is not guaranteed to be a valid scalar) — the same vetted
# primitive the did:plc minter uses.
atrium-crypto = { workspace = true }
